--- a/sigs-angular/sigs/package.json
+++ b/sigs-angular/sigs/package.json
@@ -11,32 +11,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-redux/router": "^6.0.3",
-    "@angular-redux/store": "^6.0.3",
     "@angular-devkit/core": "^0.6.3",
     "@angular-devkit/schematics": "^0.6.3",
     "@angular-devkit/schematics-cli": "^0.6.3",
-    "@angular/material": "^6.0.3",
-    "@angular/platform-server": "^6.0.3",
-    "@angular/router": "^6.0.3",
-    "@angular/cdk": "^6.0.3",
+    "@angular-redux/router": "^6.0.3",
+    "@angular-redux/store": "^6.0.3",
     "@angular/animations": "^6.0.3",
+    "@angular/cdk": "^6.0.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
-    "core-js": "^2.5.4",
-    "immutable": "3.8.2",
-    "redux": "3.7.2",
+    "@angular/platform-server": "^6.0.3",
+    "@angular/router": "^6.0.3",
     "@schematics/schematics": "^0.6.3",
+    "@types/googlemaps": "^3.30.9",
+    "angular-bootstrap-md": "^6.1.3",
+    "chart.js": "^2.5.0",
+    "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "immutable": "3.8.2",
+    "ng2-google-charts": "^3.4.0",
+    "redux": "3.7.2",
     "redux-immutable": "4.0.0",
-    "typed-immutable-record": "0.0.6",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.2.1",
     "rxjs-compat": "^6.0.0",
     "rxjs-tslint": "^0.1.4",
+    "typed-immutable-record": "0.0.6",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
