--- a/sigs-angular/Dockerfile
+++ b/sigs-angular/Dockerfile
@@ -9,7 +9,7 @@ EXPOSE 4200
 RUN useradd --user-group --create-home --shell /bin/false app
 
 # Set environment variables
-ENV HOME=/home/app APP_NAME=app_placeholder
+ENV HOME=/home/app APP_NAME=sigs
 
 # Create app directory and setup correct permissions
 RUN mkdir -p $HOME/$APP_NAME && chown -R app:app $HOME/*
@@ -22,7 +22,7 @@ ADD app_placeholder/package.json $HOME/$APP_NAME/package.json
 # Install dependencies
 RUN npm install --quiet && npm install -g --quiet @angular/cli
 # Move launch file
-ADD app_placeholder/launch.sh $HOME/$APP_NAME-frontend/$APP_NAME/launch.sh 
+ADD sigs/launch.sh $HOME/$APP_NAME-frontend/$APP_NAME/launch.sh 
 
 # Change working directory
 WORKDIR $HOME/$APP_NAME-frontend/$APP_NAME
