--- a/sigs-angular/sigs/tsconfig.json
+++ b/sigs-angular/sigs/tsconfig.json
@@ -14,6 +14,7 @@
     ],
     "paths": {
       "@app/*": ["app/*"],
+      "@environments/*": ["environments/*"],
       "@shared/*": ["app/modules/shared/*"]
     },
     "lib": [
